tweaked event page to look like our mockup (lined up info boxes and fixed footer), may still need to test on mobile to see how the screen fits.

--- a/client/app/routes/events/events.scss
+++ b/client/app/routes/events/events.scss
@@ -1,12 +1,12 @@
 .logisticsContainer {
-  height: 508pt;
+  height: 100%;
   overflow: hidden;
   color: #5D5D5D;
   font-size: 12pt;
 }
 
 .attendeeBox {
-  height: 11em;
+  height: 11.2em;
   border-bottom: solid;
   border-bottom-width: 1pt;
   border-color: #D4D4D4;
@@ -63,6 +63,7 @@ img {
 
 .attendingfooter {
   float: center;
+  padding-bottom: 0.1em;
 }
 
 .headerBox {
@@ -89,7 +90,7 @@ img {
 
 #infoDetails {
   padding: 0.55em;
-  height: 3em;
+  height: 3.6em;
   padding-left: 0.2em;
 }
 
@@ -147,6 +148,7 @@ img {
   font-weight: 100;
   letter-spacing: 0;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .rsvpButtonTextSelected {
@@ -155,4 +157,17 @@ img {
   font-weight: 100;
   letter-spacing: 0;
   vertical-align: middle;
+  cursor: default;
+}
+.bottomBar {
+  position: absolute;
+  left: 0%;
+  display: inline-block;
+  height: 4em;
+  width: 100%;
+  background-color: #1C1C1C;
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  bottom:0;
 }
